--- a/client/templates/menu.html
+++ b/client/templates/menu.html
@@ -1,1 +1,19 @@
-menu html
+<center><h1>menu</h1></center>
+
+<h2>Chicken</h2>
+
+<div ng-repeat="item in menu.chicken">
+	<p><strong ng-click="addToOrder(item)">Add</strong> - <strong>{{ item.price }}</strong> - {{ item.name }} </p>	
+</div>
+
+<h2>Kids Menu</h2>
+
+<div ng-repeat="item in menu.kids">
+	<p><strong ng-click="addToOrder(item)">Add</strong> - <strong>{{ item.price }}</strong> - {{ item.name }} </p>	
+</div>
+
+<h2>Starters</h2>
+
+<div ng-repeat="item in menu.starters">
+	<p><strong ng-click="addToOrder(item)">Add</strong> - <strong>{{ item.price }}</strong> - {{ item.name }} </p>	
+</div>
