--- a/admin/templates/orders.html
+++ b/admin/templates/orders.html
@@ -1,9 +1,10 @@
 <h1>orders</h1>
+<a href="">view historic</a>
 <hr>
 <div ng-repeat="order in orders">
-	<p>{{ order.user }}</p>
-	<p>{{ order.date }}</p>	
-	<p>{{ order.time }}</p>
+	<p><strong>{{ order.user }}</strong></p>
+	<p>{{ order.date }} {{ order.time }}</p>
 	<p ng-repeat="item in order.order"> - {{ item }}</p>
+	<button>ready</button>
 	<hr>
 </div>
