--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,12 +1,39 @@
-<style>
+<center>
+	<img src="./img/menu_header.PNG" class="pizza-thumb">
+</center>
 
-.pizza-thumb {
-	width: 200px;
-}
+<h1>Bella Napoli 1</h1>
 
-</style>
+<p>Bella Napoli 1</p>
+<p>2 Pownall Road,</p>
+<p>Ipswich,</p>
+<p>IP3 0DS</p>
 
-pepperoni<br><img src="./img/pepperoni.jpg" class="pizza-thumb" ng-click="selectPizza('pepperoni')"><br>
-margarita<br><img src="./img/margarita.jpg" class="pizza-thumb" ng-click="selectPizza('margarita')"><br>
-meatfeast<br><img src="./img/meatfeast.jpg" class="pizza-thumb" ng-click="selectPizza('meatfeast')"><br>
-corona<br><img src="./img/corona.png" class="pizza-thumb" ng-click="selectPizza('corona')"><br>
+<p>Opening Times:</p>
+<p>Monday - Sunday 12:00 hrs - 0:00 hrs</p>
+
+<p>Corner of Duke Street - 200m from UCS</p>
+
+<p>01473 288916</p>
+
+<h1>Bella Napoli 2</h1>
+
+<p>Bella Napoli 2</p>
+<p>420 Woodbridge Road,</p>
+<p>Ipswich,</p>
+<p>IP4 4EL</p>
+
+<p>Opening Times:</p>
+<p>Sunday - Thursday 12:00 hrs - 23:00 hrs</p>
+<p>Friday - Saturday : 12:00 hrs - 0:00 hrs</p>
+<p>01473 727173</p>
+
+<p>Coming Soon! </p>
+<h1>Bella Napoli 3</h1>
+
+<p>21/23 Queen Street,</p>
+<p>Ipswich,</p>
+<p>IP1 1SW</p>
+
+<p>Opening Times:</p>
+<p>Monday - Sunday 12:00 hrs - 00:00 hrs</p>
