--- a/admin/templates/home.html
+++ b/admin/templates/home.html
@@ -6,7 +6,4 @@
 
 </style>
 
-pepperoni<br><img src="./img/pepperoni.jpg" class="pizza-thumb" ng-click="selectPizza('pepperoni')"><br>
-margarita<br><img src="./img/margarita.jpg" class="pizza-thumb" ng-click="selectPizza('margarita')"><br>
-meatfeast<br><img src="./img/meatfeast.jpg" class="pizza-thumb" ng-click="selectPizza('meatfeast')"><br>
-corona<br><img src="./img/corona.png" class="pizza-thumb" ng-click="selectPizza('corona')"><br>
+<img src="./img/menu_header.PNG" class="pizza-thumb">
