--- a/client/style/main.css
+++ b/client/style/main.css
@@ -21,6 +21,23 @@ a {
 	font-family: helvetica;
 }
 
+input[type="text"] {
+    width: calc(100% - 40px);
+    height: 32px;
+    border-radius: 3px;
+    border-style: solid;
+    font-size: 22px;
+    font-family: helvetica;
+    padding: 1px 15px;
+    border-color: #999;
+}
+
+button {
+    margin: 20px;
+    width: 300px;
+    height: 40px;
+}
+
 .my-order {
 	position: relative;
     width: 200px;
@@ -29,6 +46,7 @@ a {
     color: #118217;
     font-weight: bold;
     text-align: left;
+    margin: 5px;
 }
 
 #header-bar {
@@ -101,4 +119,10 @@ a {
 .item p:hover {
 	cursor: pointer;
 	color: #075c09;	
+}
+
+
+.placeholder {
+    float: left;
+    margin: 30px 10px 4px 6px;
 }
