common image resources

--- a/admin/templates/home.html
+++ b/admin/templates/home.html
@@ -1,9 +1,3 @@
-<style>
-
-.pizza-thumb {
-	width: 200px;
-}
-
-</style>
-
-<img src="./img/menu_header.PNG" class="pizza-thumb">
+<center>
+	<img src="../img/menu_header.PNG" class="pizza-thumb">
+</center>
