--- a/admin/templates/historicOrders.html
+++ b/admin/templates/historicOrders.html
@@ -1,6 +1,11 @@
-<h1>orders</h1>
-<a href="#/historic">view historic orders</a>
+<h1>historic orders</h1>
+<a href="#/historic">view current orders</a><br><br>
+<input type="text" placeholder="search">
+
 <hr>
+
+<p>orders will show here</p>
+<!--
 <div ng-repeat="order in orders">
 	<p><strong>{{ order.user }}</strong></p>
 	<p>{{ order.date }} {{ order.time }}</p>
@@ -8,3 +13,4 @@
 	<button>ready</button>
 	<hr>
 </div>
+-->
