--- a/Maverick/css/style.css
+++ b/Maverick/css/style.css
@@ -750,13 +750,13 @@ Projects
 .cd-projects-previews a,
 .cd-projects .preview-image {
   /* set a background image for each project */
-  background: #5b927d url(./img/pasta1.png) no-repeat center center;
+  background: #5b927d url(http://cdn.jamieoliver.com/recipe-database/xtra_med/CaIW2UumqP89ZYr1_w6MRF.jpg) no-repeat center center;
   background-size: cover;
 }
 
 .cd-projects-previews li:nth-of-type(2) a,
 .cd-projects > li:nth-of-type(2) .preview-image {
-  background: url(./img/pasta2.png) no-repeat center center;
+  background: url(http://lilluna.com/wp-content/uploads/2014/08/creamy-garlic-penne-pasta-3.jpg) no-repeat center center;
   background-size: cover;
 }
 
