--- a/Maverick/css/style.css
+++ b/Maverick/css/style.css
@@ -513,7 +513,7 @@ Projects
 .cd-projects-previews a,
 .cd-projects .preview-image {
   /* set a background image for each project */
-  background: #5b927d url(http://i.huffpost.com/gen/1359234/images/o-CHILE-VINEYARDS-facebook.jpg) no-repeat center center;
+  background: #5b927d url(http://www.fassinoimmobiliare.com/italy%20country%20house/images/italy%20house%20in%20country.jpg) no-repeat center center;
   background-size: cover;
 }
 
