--- a/Maverick/css/style.css
+++ b/Maverick/css/style.css
@@ -522,6 +522,8 @@ Projects
   background-size: cover;
 }
 
+
+
 .cd-projects-previews li:nth-of-type(2) a,
 .cd-projects > li:nth-of-type(2) .preview-image {
   background: url(https://www.trevifountain.net/images/trevifountain.jpg) no-repeat center center;
@@ -530,13 +532,36 @@ Projects
 
 .cd-projects-previews li:nth-of-type(3) a,
 .cd-projects > li:nth-of-type(3) .preview-image {
-  background:  url("/img/italy1.jpg") no-repeat center center;
+  background:  url("../img/italy1.jpg") no-repeat center center;
   background-size: cover;
 
 
 }
 
-.parallax2 { /* The image used */background-image: url("http://foodtv.co.nz/wp-content/uploads/2016/10/Jamie-Oliver-S02E03-smoked-mackerel-carbonara.jpg");
+
+
+.bellaright {position: absolute; top: 0px; z-index: 2; opacity: 0; width: 33%; right: 1%; height: 100%;}
+
+.bellaright:hover { opacity: .9;}
+
+.bellaright:active { z-index: 0;}
+
+
+.bellacenter {position: absolute; top: 0px; z-index: 2; opacity: 0; width: 33%; left: 33%; height: 100%;}
+
+.bellacenter:hover { opacity: .9;}
+.bellacenter:active { z-index: 0;}
+
+
+
+.bellaleft {position: absolute; top: 0px; z-index: 2; opacity: 0; width: 33%; height: 100%;}
+
+.bellaleft:hover { opacity: .9;}
+.bellaleft:active { z-index: 0;}
+
+
+
+.parallax2 { /* The image used */background-image: url("http://www.twistoffood.com/wp-content/uploads/2015/07/Penne-Al%E2%80%99arrabiata.jpg");
 
 
     min-height: 500px;
